fixed nag floating up to left. fixed spacing for post subtitle

--- a/_styles/elements/_navigation.scss
+++ b/_styles/elements/_navigation.scss
@@ -81,7 +81,7 @@
 
 .right-nav{
     @include mq(981px) {
-        width: auto;
+        width: 50%;
         float: right;
         vertical-align: middle;
 
